# kora

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
_bmad-output/implementation-artifacts/: 1-3-retrieve-schema-by-global-id.md  1-4-retrieve-schema-by-subject-version.md  1-6-check-schema-registration.md  2-3-schema-id-cross-references.md  3-1-json-schema-format-handler.md  3-2-protobuf-format-handler.md  4-2-confluent-api-parity-infrastructure.md  4-3-confluent-api-parity-list-params.md  4-5-referenced-by-lookup.md  5-1-compatibility-test-endpoint.md  6-2-prometheus-metrics.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-kora.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  cursor.yaml  github-copilot.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  tls-secret.yaml
migrations/: 001_initial_schema.sql
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: compatibility.rs  metrics.rs  middleware.rs  mod.rs  mode.rs  schemas.rs  subjects.rs
src/schema/: avro.rs  json_schema.rs  mod.rs  protobuf.rs
src/schema/json_schema/: diff.rs  mod.rs
src/schema/protobuf/: diff.rs  mod.rs
src/storage/: compatibility.rs  mod.rs  references.rs  schemas.rs  subjects.rs
tests/: api_check_schema.rs  api_compatibility_config.rs  api_compatibility_test.rs  api_delete_subject.rs  api_get_schema.rs  api_get_schema_by_id.rs  api_get_schema_by_version.rs  api_hard_delete.rs  api_health.rs  api_list_schema_types.rs  api_list_schemas.rs  api_list_subjects.rs  api_metrics.rs  api_mode.rs  api_register_schema.rs  api_root.rs  api_schema_cross_refs.rs  api_schema_references.rs  config.rs  confluent_avro_compat.rs  confluent_json_schema_compat.rs  confluent_protobuf_compat.rs  db_migrations.rs  error_responses.rs  schema_parsing.rs
tests/common/: api.rs  mod.rs
tests/fixtures/confluent/: pb_diff_examples.json
