[package]
name = "kora"
version = "0.2.4"
edition = "2024"

[dependencies]
apache-avro = "0.21.0"
axum = { version = "0.8.9", features = ["macros"] }
figment = { version = "0.10.19", features = ["env"] }
hex = "0.4"
jsonschema = { version = "0.46.2", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
prost-types = "0.14.3"
protox-parse = "0.9"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "migrate", "macros", "uuid", "chrono", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serial_test = { version = "3.4.0", features = ["file_locks"] }
tokio-test = "0.4.5"
